# TESTBCC

./: .gitignore  docker-compose.yml  run.bat  script.rs
api/: Cargo.toml  dockerfile
api-dummy/: Cargo.toml
api-dummy/src/: main.rs
api/src/: db.rs  lib.rs  main.rs  services.rs
api/web/: hoisted-42570990.js  index.html
api/web/home/: index.html
api/web/login/: index.html
app/: Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml
app/src/components/: Card.astro
app/src/layouts/: Layout.astro
app/src/pages/: home.astro  index.astro  login.astro
web/: Dockerfile
