[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.7.0"
actix-web = "4.4.0"
diesel = { version = "2.1.3", features = ["mysql"] }
futures = "0.3.29"
mysql = "24.0.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[[bin]]
name = "api"
path = "src/main.rs"
